Version 2 (#9)
- Nutritional values can be added to ingredients
- Open Food Facts can be used for nutritional values
- Stories can now be created - share your story with others
- Improvements in password recovery
- Introduced Spotless for unified file formatting
- Other improvements